# sam_experiments

./: .gitignore  .gitmodules  LICENSE  Readme.md  pyproject.toml  requirements.txt
code/: arima_darts_testing.py  arima_statsfcst_testing.py  arima_testing.py
code/experiments/arima/: main.py  main2.py  main3.py  main4.py
code/experiments/samformer/: main.py
code/experiments/tsmixer/: main.py
code/experiments/vgg/: main.py
code/src/base/: base_experiment.py  engine.py  model.py  nixtla_engine.py  nixtla_engine2.py  nixtla_sequential_comparison.py  nixtla_sequential_comparison_old.py  torch_engine.py  torch_engine_copy.py  torch_engine_old2.py  torch_standard_experiment.py  torch_standard_experiment_old.py
code/src/engines/: arima2_engine.py  arima_engine.py  arima_engine_copy.py  autoformer_engine.py  patchtst_engine.py  samformer_engine.py  samformer_engine_old.py  tsmixer_engine.py  vgg_engine.py
code/src/models/: resnet.py  samformer.py  tsmixer.py  vgg.py  wide_resnet.py
code/src/utils/: args.py  args2.py  (+12 more)
experiments/sequential_analysis/: auto_mfles.py  auto_tbats.py  seasonal_exponential_smoothing.py
experiments/standard/: dlinear.py  fedformer.py  informer.py  linear.py  nlinear.py  patchtst.py  samformer.py  tsmixer.py  tsmixer_ext.py
scripts/: download_cifar10_dataset.py  download_data.py  download_samformer_dataset.py
src/base/: base_experiment.py  model.py  nixtla_engine.py  nixtla_sequential_comparison.py  torch_engine.py  torch_engine_copy.py  torch_standard_experiment.py
src/engines/: autoformer_engine.py  dlinear_engine.py  fedformer_engine.py  fedformer_engine_workaround_for_sam.py  informer_engine.py  informer_engine_copy.py  linear_engine.py  nlinear_engine.py  patchtst_engine.py  samformer_engine.py  tsmixer_engine.py  tsmixer_ext_engine.py  vgg_engine.py
src/utils/: args.py  dataloader.py  dataloader_copy2.py  dataloader_copy3.py  functions.py  hessian_utils.py  metrics.py  model_utils.py  paths.py
(+69 files in other folders)
