[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsfb"
version = "0.1.0"
description = "Time Series Forecasting Benchmark"
readme = "Readme.md"
license = "MIT"
requires-python = ">=3.11,<3.14"

dependencies = [
    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.18.0",
    "torchmetrics>=1.0.0",
    "accelerate>=1.0.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "einops>=0.8.0",

    # Data & Computation
    "numpy>=2.0.0",
    "scipy>=1.12.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",

    # Time Series
    "statsforecast>=1.7.0",

    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",

    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
notebooks = ["jupyterlab>=4.0.0", "ipykernel>=6.0.0", "notebook>=7.0.0"]
all = ["tsfb[dev,notebooks]"]

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["data*", "results*", "lib*", "experiments*"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
exclude = '''
/(
    data
    | results
    | lib
    | \.git
)/
'''

[tool.ruff]
line-length = 100
exclude = ["data", "results", "lib"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort (import sorting)
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["data", "results", "lib"]
